--- a/src/definition/basharat-ndv-definition.tex
+++ b/src/definition/basharat-ndv-definition.tex
@@ -1,5 +1,13 @@
 
 
+\subsection{Башарат}
+
+% Нечеткие дубликаты видео — изображение того же эпизода (например, «беспилотный ле-
+% тательный аппарат в воздухе») при различных точках обзора, размерах видео, ландшафте,
+% погодных условиях, моделях БПЛА и движениях камеры. Одна и та же смысловая концепция
+% может быть выражена в различной форме, при разном освещении, и параметрах сцены.
+
+
 \begin{frame}[fragile]{Нечеткие дубликаты видео по~Башарату}
     \lbgGreenBox{Общая смысловая концепция, разные варианты представления}{
         \begin{center}
