--- a/src/definition/cherubini-ndv-definition.tex
+++ b/src/definition/cherubini-ndv-definition.tex
@@ -1,4 +1,13 @@
 
+\subsection{Керубини}
+
+% Нечеткие дубликаты видео — приблизительно одинаковые видео, которые могут отличаться
+% параметрами кодирования, светоизмерительными параметрами (цветность, яркость), приме-
+% нением монтажа (титры, логотип), или наложением аудио. Идентичные видео с соответству-
+% ющей дополнительной информацией, в любом из них (изменения длины клипа или сцен)
+% рассматриваются как НДВ. Два различных видео с разным представлением и сценарии, счи-
+% тают НДВ, если они используют одинаковую семантику, и ни одного из них нет дополни-
+% тельной информации
 
 \begin{frame}[fragile]{Нечеткие дубликаты видео по~Керубини}
     \lbgBlueBox{Общая семантика и нет дополнительной информации}{
