--- a/src/definition/shen-ndv-definition.tex
+++ b/src/definition/shen-ndv-definition.tex
@@ -1,5 +1,15 @@
 
-\begin{frame}[fragile]{Нечеткие дубликаты видео по~Шену}
+
+\subsection{Шен}
+
+% Нечеткие дубликаты видео — клипы, которые похожи или почти дублируют друг от друга,
+% но выглядят по-разному. Они отличаются в силу разных условий съемки (точка обзора и на-
+% стройки камеры, условия освещения, фон, передний план, и т. д.), преобразований (формат
+% видео, частота кадров, разрешение, сдвиг, обрезка, гамма, контраст, яркость, насыщенность,
+% размытие, выдержка, резкость и т. д.), операции монтажа (вставка, удаление, перемена мест
+% кадров и модификация содержимого)
+
+\begin{frame}{Нечеткие дубликаты видео по~Шену}
 
 
     \lbgOrangeBox{Общая сцена, разные условия съемки и варианты монтажа}{
