--- a/src/definition/wu-ndv-definition.tex
+++ b/src/definition/wu-ndv-definition.tex
@@ -1,6 +1,13 @@
 
 
-\begin{frame}[fragile]{Нечеткие дубликаты видео по~Ву}
+\subsection{Ву}
+
+% Нечеткие дубликаты видео — идентичные или приблизительно идентичные видео, почти
+% точные копии друг друга, но отличающийся форматами файлов, параметрами кодирования,
+% светоизмерительными параметрами (цветность, яркость), применением монтажа (титры, ло-
+% готип, рамка), длиной и набором модификаций (вставка или удаление кадров)
+
+\begin{frame}{Нечеткие дубликаты видео по~Ву}
 
     \lbgGrayBox{Копии друг друга, отличаются набором модификаций}{
         \begin{center}
