--- a/src/signatures/global.tex
+++ b/src/signatures/global.tex
@@ -18,7 +18,7 @@
             \item   ссылочная видео-гистограмма — набор опорных кадров;
             \item   кластеризация кадров.
         \end{itemize}
-        \item изменение кадров во времени:
+        \item пространственно-временные сигнатуры:
         \begin{itemize}
             \item   отслеживание траекторий;
             \item   линеаризация, порядковая сигнатура;
