--- a/src/signatures/local.tex
+++ b/src/signatures/local.tex
@@ -15,7 +15,7 @@
         Пусть дано некоторое видео:
         \begin{itemize}
             \item разрешение $800 \times 600$ пикселей;
-            \item может быть найдено около $1000$ точек;
+            \item в кадре может быть найдено около $1000$ точек;
         \end{itemize}
         \vspace{1em}
         Если таких видео много:
